--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 
       <div class="work">
 
-          <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <a href="https://badger-mchlb.github.io/Psychic-game"><img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess"></a>
           
           <h3>Word Guess</h3>
 
@@ -51,14 +51,14 @@
           
         <div class="work">
 
-          <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+          <a href="https://badger-mchlb.github.io/project1/"><img src="assets/images/iStock-455939119-pub-beer-640x480.jpg" alt="Beer Image"></a>
   
-          <h3>RPG Game</h3>
+          <h3>Beers vs Cocktail</h3>
 
       </div>
         <div class="work">
 
-          <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+          <a href="https://badger-mchlb.github.io/TriviaGame/"><img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game"></a>
 
           <h3>Trivia Game</h3>
         </div>
